[gd_scene load_steps=3 format=3 uid="uid://b8h3i77hnhcfs"]

[ext_resource type="Script" path="res://battle_manager.gd" id="1_5ua2b"]
[ext_resource type="PackedScene" uid="uid://ov78bfqeia6n" path="res://enemy_battler.tscn" id="2_e1i7m"]

[node name="BattleManager" type="Node"]
script = ExtResource("1_5ua2b")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(573, 323)

[node name="BG" type="Sprite2D" parent="."]

[node name="EnemyBattler" parent="." instance=ExtResource("2_e1i7m")]
position = Vector2(726, 94)

[node name="EnemyBattler2" parent="." instance=ExtResource("2_e1i7m")]
position = Vector2(834, 164)

[node name="EnemyBattler3" parent="." instance=ExtResource("2_e1i7m")]
position = Vector2(783, 276)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnActionButtons" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -47.0
offset_right = 68.0
grow_horizontal = 2
grow_vertical = 0

[node name="AttackButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
layout_mode = 2
text = "Attack"

[node name="SkipTurnButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
layout_mode = 2
text = "Skip"

[node name="BattleEndPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -288.0
offset_right = 93.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0

[node name="BattleEndText" type="RichTextLabel" parent="CanvasLayer/BattleEndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -20.0
offset_right = 89.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Battle end message"
